WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122267
[EFL] [DEBUG] JavaScriptCore fails to build
https://bugs.webkit.org/show_bug.cgi?id=122267
Summary
[EFL] [DEBUG] JavaScriptCore fails to build
Rob Płóciennik
Reported
2013-10-03 06:23:40 PDT
Build fails due to an expression containing comparison between signed and unsigned integer. Source/JavaScriptCore/llint/LLIntData.cpp: In static member function ‘static void JSC::LLInt::Data::performAssertions(JSC::VM&)’: Source/JavaScriptCore/llint/LLIntData.cpp:128:5: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
Attachments
Patch
(1.46 KB, patch)
2013-10-03 07:24 PDT
,
Sergio Correia (qrwteyrutiyoup)
no flags
Details
Formatted Diff
Diff
Patch
(1.47 KB, patch)
2013-10-03 09:35 PDT
,
Sergio Correia (qrwteyrutiyoup)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Correia (qrwteyrutiyoup)
Comment 1
2013-10-03 07:24:00 PDT
Created
attachment 213244
[details]
Patch
Rob Płóciennik
Comment 2
2013-10-03 07:34:46 PDT
How about changing it to: ASSERT(MarkedBlock::blockMask == ~static_cast<decltype(MarkedBlock::blockMask)>(0xffff));
Sergio Correia (qrwteyrutiyoup)
Comment 3
2013-10-03 07:48:42 PDT
(In reply to
comment #2
)
> How about changing it to: > > ASSERT(MarkedBlock::blockMask == ~static_cast<decltype(MarkedBlock::blockMask)>(0xffff));
Nice suggestion. I am going to update the patch.
Sergio Correia (qrwteyrutiyoup)
Comment 4
2013-10-03 07:53:14 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > How about changing it to: > > > > ASSERT(MarkedBlock::blockMask == ~static_cast<decltype(MarkedBlock::blockMask)>(0xffff)); > > Nice suggestion. I am going to update the patch.
Michael, I saw you have just r+'ed it; should I update the patch to apply Rob's suggestion?
Michael Saboff
Comment 5
2013-10-03 08:07:52 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > (In reply to
comment #2
) > > > How about changing it to: > > > > > > ASSERT(MarkedBlock::blockMask == ~static_cast<decltype(MarkedBlock::blockMask)>(0xffff)); > > > > Nice suggestion. I am going to update the patch. > > Michael, I saw you have just r+'ed it; should I update the patch to apply Rob's suggestion?
Sure. I just CQ-. Maybe that stopped the bots.
Sergio Correia (qrwteyrutiyoup)
Comment 6
2013-10-03 09:35:33 PDT
Created
attachment 213271
[details]
Patch Updated as per Rob's suggestion.
WebKit Commit Bot
Comment 7
2013-10-03 10:11:28 PDT
Comment on
attachment 213271
[details]
Patch Clearing flags on attachment: 213271 Committed
r156837
: <
http://trac.webkit.org/changeset/156837
>
WebKit Commit Bot
Comment 8
2013-10-03 10:11:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug