[EFL] [DEBUG] JavaScriptCore fails to build https://bugs.webkit.org/show_bug.cgi?id=122267

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-10-03
Reviewed by Michael Saboff.

Build fails due to an expression containing comparison between signed
and unsigned integer.

* llint/LLIntData.cpp:
(JSC::LLInt::Data::performAssertions): Add cast to avoid signed vs.
unsigned comparison warning.

Canonical link: https://commits.webkit.org/140319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156837 268f45cc-cd09-0410-ab3c-d52691b4dbfc